SERVER-79637:  Incorrect query results in $lookup with TS foreign collection using a correlated predicate (#16989)

GitOrigin-RevId: f64818bae7a2d8251c3f7c6c84193052910ceaf5