src/mongo/db/pipeline/document_source_sequential_document_cache.cpp
@@ -85,9 +85,10 @@ DocumentSource::GetNextResult DocumentSourceSequentialDocumentCache::doGetNext()
 
 Pipeline::SourceContainer::iterator DocumentSourceSequentialDocumentCache::doOptimizeAt(
     Pipeline::SourceContainer::iterator itr, Pipeline::SourceContainer* container) {
-    // The DocumentSourceSequentialDocumentCache should always be the last stage in the pipeline
-    // pre-optimization. By the time optimization reaches this point, all preceding stages are in
-    // the final positions which they would have occupied if no cache stage was present.
+    // The DocumentSourceSequentialDocumentCache relies on all other stages in the pipeline being at
+    // the final positions which they would have occupied if no cache stage was present. This should
+    // be the case when we reach this function. The cache should always be the last stage in the
+    // pipeline pre-optimizing.
     invariant(_hasOptimizedPos || std::next(itr) == container->end());
     invariant((*itr).get() == this);
 
